--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -3,19 +3,12 @@ type = SONY_SD101
 room = room_2_a
 floor = 1
 log = FIRE
-config = 3
+config = 9
 
 [Sony_SD101_2]
 type = SONY_SD101
-room = room_7_t
-floor = 171
-log = FIRE
-config = 1
-
-[Sony_SD101_3]
-type = SONY_SD101
-room = room_1_b
-floor = 4
+room = room_5_c
+floor = 7
 log = FIRE
 config = 5
 
@@ -24,14 +17,9 @@ type = HITACHI_SPRINK2000
 room = room_2_a
 floor = 1
 log = FIRE
-config = FIRE,1,room_2_a,FIRE,171,room_7_t 
+config = FIRE,1,room_2_a,|FIRE,7,room_5_c,|
 
-[Hitachi_SPRINK2000_2]
-type = HITACHI_SPRINK2000
-room = room_2_a
-floor = 1
-log = FIRE
-config = FIRE,4,room_1_b
+
 
 
 
