--- a/C++/SmartHome/Code/INI/Config.ini
+++ b/C++/SmartHome/Code/INI/Config.ini
@@ -3,14 +3,14 @@ type = SONY_SD101
 room = room_2_a
 floor = 1
 log = FIRE
-config = 9
+config = 2
 
 [Sony_SD101_2]
 type = SONY_SD101
 room = room_5_c
 floor = 7
 log = FIRE
-config = 5
+config = 3
 
 [Hitachi_SPRINK2000_1]
 type = HITACHI_SPRINK2000
@@ -19,9 +19,9 @@ floor = 1
 log = FIRE
 config = FIRE,1,room_2_a,|FIRE,7,room_5_c,|
 
-
-
-
-
-
-
+[Hitachi_SPRINK2000_2]
+type = HITACHI_SPRINK2000
+room = room_2_a
+floor = 1
+log = FIRE
+config = FIRE,7,room_5_c,|
