--- a/AdvC++/C++2C/Day1/points_jul_17_ex/makefile
+++ b/AdvC++/C++2C/Day1/points_jul_17_ex/makefile
@@ -1,17 +1,8 @@
-
-
-
-
-
-
-
-
 all: PointsC.out PointsCPP.out
 
 
-
 PointsC.out: EyalsPoints.c
-	gcc -g -o PointsC.out EyalsPoints.c -lm
+	gcc -g -ansi -pedantic -Wall -o PointsC.out EyalsPoints.c -lm
 	
 PointsCPP.out: points_jul_17.cpp
 	g++ -g -o PointsCPP.out points_jul_17.cpp -lm
