--- a/AdvC++/MyPthread/Mutex/makefile
+++ b/AdvC++/MyPthread/Mutex/makefile
@@ -1,5 +1,6 @@
 FLAGS = -ansi -pedantic -Wall -pthread
-objects = Mutex.o Test_Mutex.o
+SYNCEXC_PATH = ../SyncExceptions/
+objects = SyncExceptions.o Mutex.o Test_Mutex.o
 
 Test_Mutex.out: $(objects)
 	g++ $(FLAGS) $(objects) -o Test_Mutex.out 
@@ -7,8 +8,11 @@ Test_Mutex.out: $(objects)
 Test_Mutex.o: Test_Mutex.cpp Mutex.h
 	g++ -c $(FLAGS) Test_Mutex.cpp
 	
-Mutex.o: Mutex.cpp Mutex.h
+Mutex.o: Mutex.cpp Mutex.h $(SYNCEXC_PATH)SyncExceptions.h
 	g++ -c $(FLAGS) Mutex.cpp
+
+SyncExceptions.o: $(SYNCEXC_PATH)SyncExceptions.cpp $(SYNCEXC_PATH)SyncExceptions.h
+	g++ -c $(FLAGS) $(SYNCEXC_PATH)SyncExceptions.cpp
 
 clean:
 	rm Test_Mutex.out $(objects) 
