--- a/AdvC++/MyPthread/CondVar/makefile
+++ b/AdvC++/MyPthread/CondVar/makefile
@@ -1,6 +1,7 @@
-FLAGS = -ansi -pedantic -Wall -pthread -g
+FLAGS = -ansi -pedantic -Wall -pthread -g -std=c++98
+SYNCEXC_PATH = ../SyncExceptions/
 MUTEX_PATH = ../Mutex/
-objects = Mutex.o CondVar.o Test_CondVar.o
+objects = SyncExceptions.o Mutex.o CondVar.o Test_CondVar.o
 
 Test_CondVar.out: $(objects)
 	g++ $(FLAGS) $(objects) -o Test_CondVar.out 
@@ -13,6 +14,9 @@ CondVar.o: CondVar.cpp CondVar.h $(MUTEX_PATH)Mutex.h
 	
 Mutex.o: $(MUTEX_PATH)Mutex.cpp $(MUTEX_PATH)Mutex.h
 	g++ -c $(FLAGS) $(MUTEX_PATH)Mutex.cpp
+	
+SyncExceptions.o: $(SYNCEXC_PATH)SyncExceptions.cpp $(SYNCEXC_PATH)SyncExceptions.h
+	g++ -c $(FLAGS) $(SYNCEXC_PATH)SyncExceptions.cpp
 
 clean:
 	rm Test_CondVar.out $(objects) 
