--- a/AdvC++/MyPthread/Thread/makefile
+++ b/AdvC++/MyPthread/Thread/makefile
@@ -1,7 +1,8 @@
-FLAGS = -ansi -pedantic -Wall -pthread -g
+FLAGS = -ansi -pedantic -Wall -pthread -g -std=c++98
+SYNCEXC_PATH = ../SyncExceptions/
 MUTEX_PATH = ../Mutex/
 CONDV_PATH = ../CondVar/
-objects = Mutex.o CondVar.o Test_Thread.o
+objects = SyncExceptions.o Mutex.o CondVar.o Test_Thread.o
 
 Test_Thread.out: $(objects)
 	g++ $(FLAGS) $(objects) -o Test_Thread.out 
@@ -14,6 +15,9 @@ CondVar.o: $(CONDV_PATH)CondVar.cpp $(CONDV_PATH)CondVar.h $(MUTEX_PATH)Mutex.h
 	
 Mutex.o: $(MUTEX_PATH)Mutex.cpp $(MUTEX_PATH)Mutex.h
 	g++ -c $(FLAGS) $(MUTEX_PATH)Mutex.cpp
+	
+SyncExceptions.o: $(SYNCEXC_PATH)SyncExceptions.cpp $(SYNCEXC_PATH)SyncExceptions.h
+	g++ -c $(FLAGS) $(SYNCEXC_PATH)SyncExceptions.cpp
 
 clean:
 	rm Test_Thread.out $(objects) 
