--- a/AdvC++/MyPthread/Thread/makefile
+++ b/AdvC++/MyPthread/Thread/makefile
@@ -1,8 +1,9 @@
 FLAGS = -ansi -pedantic -Wall -pthread -g -std=c++98
 SYNCEXC_PATH = ../SyncExceptions/
 MUTEX_PATH = ../Mutex/
+GUAR_PATH = ../Guard/
 CONDV_PATH = ../CondVar/
-objects = SyncExceptions.o Mutex.o CondVar.o Test_Thread.o
+objects = SyncExceptions.o Mutex.o Guard.o CondVar.o Test_Thread.o
 
 Test_Thread.out: $(objects)
 	g++ $(FLAGS) $(objects) -o Test_Thread.out 
@@ -12,7 +13,10 @@ Test_Thread.o: Test_Thread.cpp Thread.h $(CONDV_PATH)CondVar.h $(MUTEX_PATH)Mute
 	
 CondVar.o: $(CONDV_PATH)CondVar.cpp $(CONDV_PATH)CondVar.h $(MUTEX_PATH)Mutex.h
 	g++ -c $(FLAGS) $(CONDV_PATH)CondVar.cpp
-	
+
+Guard.o: $(GUAR_PATH)Guard.cpp $(GUAR_PATH)Guard.h $(MUTEX_PATH)Mutex.h
+	g++ -c $(FLAGS) $(GUAR_PATH)Guard.cpp
+
 Mutex.o: $(MUTEX_PATH)Mutex.cpp $(MUTEX_PATH)Mutex.h
 	g++ -c $(FLAGS) $(MUTEX_PATH)Mutex.cpp
 	
