--- a/Network++/TCP_C++/Phase2/v7_lessExc/makefile
+++ b/Network++/TCP_C++/Phase2/v7_lessExc/makefile
@@ -16,13 +16,13 @@ ServerObjects = FDSet_t.o CommSock.o ServerSock.o ServerCPP.o Test_Server.o
 ClientObjects = ClientSock.o ClientCPP.o Test_Client.o
 AllObjects = $(CommonObjects) $(ServerObjects) $(ClientObjects)
 ################################################
-all: ServerTest.out ClientTest.out
+all: TestServer.out TestClient.out
 ################################################
-ServerTest.out: $(CommonObjects) $(ServerObjects)
-	g++ $(FLAGS) -o ServerTest.out $(ServerObjects) $(CommonObjects)
+TestServer.out: $(CommonObjects) $(ServerObjects)
+	g++ $(FLAGS) -o TestServer.out $(ServerObjects) $(CommonObjects)
 
-Test_Server.o: Test_Server.cpp $(SERVER_PATH)ServerCPP.h
-	g++ $(FLAGS) -o Test_Server.o -c Test_Server.cpp
+Test_Server.o: $(SERVER_PATH)Test_Server.cpp $(SERVER_PATH)ServerCPP.h
+	g++ $(FLAGS) -o Test_Server.o -c $(SERVER_PATH)Test_Server.cpp
 
 ServerCPP.o: $(SERVER_PATH)ServerCPP.cpp $(SERVER_PATH)ServerCPP.h $(SERVER_SOCK_PATH)ServerSock.h\
 				$(COMM_SOCK_PATH)CommSock.h $(SOCKET_T_PATH)Socket_t.h $(FD_T_PATH)FD_t.h \
@@ -52,11 +52,11 @@ FDSet_t.o: $(FD_SET_PATH)FDSet_t.cpp $(FD_SET_PATH)FDSet_t.h $(FD_T_PATH)FD_t.h 
 FD_t.o: $(FD_T_PATH)FD_t.cpp $(FD_T_PATH)FD_t.h
 	g++ $(FLAGS) -o FD_t.o -c $(FD_T_PATH)FD_t.cpp
 ################################################
-ClientTest.out: $(CommonObjects) $(ClientObjects)
-	g++ $(FLAGS) -o ClientTest.out $(ClientObjects) $(CommonObjects)
+TestClient.out: $(CommonObjects) $(ClientObjects)
+	g++ $(FLAGS) -o TestClient.out $(ClientObjects) $(CommonObjects)
 
-Test_Client.o: Test_Client.cpp $(CLIENT_PATH)ClientCPP.h
-	g++ $(FLAGS) -o Test_Client.o -c Test_Client.cpp
+Test_Client.o: $(CLIENT_PATH)Test_Client.cpp $(CLIENT_PATH)ClientCPP.h
+	g++ $(FLAGS) -o Test_Client.o -c $(CLIENT_PATH)Test_Client.cpp
 
 ClientCPP.o: $(CLIENT_PATH)ClientCPP.cpp $(CLIENT_PATH)ClientCPP.h $(CLIENT_SOCK_PATH)ClientSock.h\
 				$(NET_EXC_PATH)NetExceptions.h
@@ -67,5 +67,5 @@ ClientSock.o: $(CLIENT_SOCK_PATH)ClientSock.cpp $(CLIENT_SOCK_PATH)ClientSock.h 
 	g++ $(FLAGS) -o ClientSock.o -c $(CLIENT_SOCK_PATH)ClientSock.cpp
 ################################################
 clean:
-	rm ClientTest.out ServerTest.out $(AllObjects)
+	rm TestClient.out TestServer.out $(AllObjects)
 
