--- a/Eyals_Coding/Sort_Algorithms/makefile
+++ b/Eyals_Coding/Sort_Algorithms/makefile
@@ -1,7 +1,7 @@
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
 INC_PATH = ../Data_Structures/inc/
 VEC_PATH = ../Data_Structures/source/Vector/
-objects = Vector.o Bubble.o TEST_Sort_Algorithms.o
+objects = Vector.o Bubble.o Shake.o Insertion.o Shell.o Selection.o QuickSort.o TEST_Sort_Algorithms.o
 
 
 TEST_Sort_Algorithms.out: $(objects)
@@ -9,6 +9,21 @@ TEST_Sort_Algorithms.out: $(objects)
 
 TEST_Sort_Algorithms.o: TEST_Sort_Algorithms.c Sort_Algorithms.h $(INC_PATH)Vector.h 
 	gcc $(FLAGS) -c TEST_Sort_Algorithms.c
+
+Quick.o: Quick.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Quick.c
+
+Selection.o: Selection.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Selection.c
+
+Shell.o: Shell.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Shell.c
+
+Insertion.o: Insertion.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Insertion.c
+
+Shake.o: Shake.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Shake.c
 	
 Bubble.o: Bubble.c Sort_Algorithms.h $(INC_PATH)Vector.h
 	gcc $(FLAGS) -c Bubble.c
