working merge, cleaned compilation

--- a/Eyals_Coding/Sort_Algorithms/makefile
+++ b/Eyals_Coding/Sort_Algorithms/makefile
@@ -1,7 +1,7 @@
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
 INC_PATH = ../Data_Structures/inc/
 VEC_PATH = ../Data_Structures/source/Vector/
-objects = Vector.o Bubble.o Shake.o Insertion.o Shell.o Selection.o Quick.o Merge.o TEST_Sort_Algorithms.o
+objects = Vector.o Bubble.o Shake.o Insertion.o Shell.o Selection.o Quick.o Merge.o Counting.o TEST_Sort_Algorithms.o
 
 
 TEST_Sort_Algorithms.out: $(objects)
@@ -9,6 +9,9 @@ TEST_Sort_Algorithms.out: $(objects)
 
 TEST_Sort_Algorithms.o: TEST_Sort_Algorithms.c Sort_Algorithms.h $(INC_PATH)Vector.h 
 	gcc $(FLAGS) -c TEST_Sort_Algorithms.c
+
+Counting.o: Counting.c Sort_Algorithms.h $(INC_PATH)Vector.h
+	gcc $(FLAGS) -c Counting.c
 
 Merge.o: Merge.c Sort_Algorithms.h $(INC_PATH)Vector.h
 	gcc $(FLAGS) -c Merge.c
