new test sort functions and also heap sort

--- a/Eyals_Coding/Sort_Algorithms/makefile
+++ b/Eyals_Coding/Sort_Algorithms/makefile
@@ -1,13 +1,14 @@
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
 INC_PATH = ../Data_Structures/inc/
 VEC_PATH = ../Data_Structures/source/Vector/
-objects = Vector.o Bubble.o Shake.o Insertion.o Shell.o Selection.o Quick.o Merge.o Counting.o Radix.o TEST_Sort_Algorithms.o
+HEAP_PATH = ../Data_Structures/source/Heap/
+objects = Vector.o VectorFunctions.o Heap.o HeapFunctions.o Bubble.o Shake.o Insertion.o Shell.o Selection.o Quick.o Merge.o Counting.o Radix.o TEST_Sort_Algorithms.o
 
 
 TEST_Sort_Algorithms.out: $(objects)
 	gcc $(FLAGS) -o TEST_Sort_Algorithms.out  $(objects) 
 
-TEST_Sort_Algorithms.o: TEST_Sort_Algorithms.c Sort_Algorithms.h $(INC_PATH)Vector.h 
+TEST_Sort_Algorithms.o: TEST_Sort_Algorithms.c Sort_Algorithms.h $(INC_PATH)Vector.h $(INC_PATH)VectorFunctions.h $(INC_PATH)Heap.h $(INC_PATH)HeapFunctions.h
 	gcc $(FLAGS) -c TEST_Sort_Algorithms.c
 
 Radix.o: Radix.c Sort_Algorithms.h $(INC_PATH)Vector.h
@@ -36,6 +37,15 @@ Shake.o: Shake.c Sort_Algorithms.h $(INC_PATH)Vector.h
 	
 Bubble.o: Bubble.c Sort_Algorithms.h $(INC_PATH)Vector.h
 	gcc $(FLAGS) -c Bubble.c
+	
+HeapFunctions.o: $(HEAP_PATH)HeapFunctions.c $(INC_PATH)HeapFunctions.h $(INC_PATH)VectorFunctions.h $(INC_PATH)Vector.h $(INC_PATH)ADTErr.h
+	gcc $(FLAGS) -c $(HEAP_PATH)HeapFunctions.c
+	
+Heap.o: $(HEAP_PATH)Heap.c $(INC_PATH)Vector.h $(INC_PATH)ADTErr.h $(INC_PATH)Heap.h
+	gcc $(FLAGS) -c $(HEAP_PATH)Heap.c
+	
+VectorFunctions.o: $(VEC_PATH)VectorFunctions.c $(INC_PATH)VectorFunctions.h $(INC_PATH)Vector.h $(INC_PATH)ADTErr.h
+	gcc $(FLAGS) -c $(VEC_PATH)VectorFunctions.c
 
 Vector.o: $(VEC_PATH)Vector.c $(INC_PATH)Vector.h
 	gcc $(FLAGS) -c $(VEC_PATH)Vector.c
