--- a/Eyals_Coding/Data_Structures/source/Stack/makefile
+++ b/Eyals_Coding/Data_Structures/source/Stack/makefile
@@ -7,7 +7,7 @@ objects = Vector.o Stack.o TEST_Stack.o
 TEST_Stack.out: $(objects) 
 	gcc $(FLAGS) -o TEST_Stack.out  $(objects)
 
-TEST_Stack.o: TEST_Stack.c $(INC_PATH)Stack.h $(INC_PATH)Vector.h $(INC_PATH)mu_test.h $(INC_PATH)ADTErr.h
+TEST_Stack.o: TEST_Stack.c $(INC_PATH)Stack.h $(INC_PATH)Vector.h $(INC_PATH)VectorFunctions.h $(INC_PATH)mu_test.h $(INC_PATH)ADTErr.h
 	gcc $(FLAGS) -c TEST_Stack.c
 
 Stack.o: Stack.c $(INC_PATH)Stack.h $(INC_PATH)Vector.h $(INC_PATH)ADTErr.h
