--- a/Eyals_Coding/GeneralFunctions/makefile
+++ b/Eyals_Coding/GeneralFunctions/makefile
@@ -1,6 +1,7 @@
 FLAGS = -g -ansi -pedantic -Wall -Wconversion -m32
 DS_INC_PATH = ../Data_Structures/inc/
-objects = GeneralFunctions.o TEST_GeneralFunctions.o
+VEC_PATH = ../Data_Structures/source/Vector/
+objects = Vector.o GeneralFunctions.o TEST_GeneralFunctions.o
 
 
 TEST_GeneralFunctions.out: $(objects) 
@@ -11,6 +12,9 @@ TEST_GeneralFunctions.o: TEST_GeneralFunctions.c GeneralFunctions.h $(DS_INC_PAT
 
 GeneralFunctions.o: GeneralFunctions.c GeneralFunctions.h
 	gcc $(FLAGS) -c GeneralFunctions.c
+	
+Vector.o: $(VEC_PATH)Vector.c $(DS_INC_PATH)Vector.h $(DS_INC_PATH)ADTErr.h
+	gcc $(FLAGS) -c $(VEC_PATH)Vector.c
 
 clean:
 	rm $(objects) TEST_GeneralFunctions.out
