--- a/BattleshipsGame/Battleships_fromIshay/Battleships_dev_pack/Battleships_dev_pack/Battleships/Battleships.vcxproj
+++ b/BattleshipsGame/Battleships_fromIshay/Battleships_dev_pack/Battleships_dev_pack/Battleships/Battleships.vcxproj
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<Project DefaultTargets="Build" ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup Label="ProjectConfigurations">
     <ProjectConfiguration Include="Debug|Win32">
       <Configuration>Debug</Configuration>
@@ -127,10 +127,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Battleships.c" />
+    <ClInclude Include="BSEngine.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="BSEngine.h" />
+    <Compile Include="Battleships.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
